correction alignement texte section l-card

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -45,6 +45,10 @@
   .l-card-content {
     background-color: var(--main-color);
     padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
   }
 }
 
